# rp2040joy

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
app/: CMakeLists.txt
app/src/: AxisCalibrator.cpp  AxisCalibrator.h  ConfigModel.cpp  ConfigModel.h  DeviceLink.cpp  DeviceLink.h  MainWindow.cpp  MainWindow.h  main.cpp
firmware/: CMakeLists.txt  tusb_config.h
firmware/include/: config.h  flash_store.h  hid_protocol.h  input.h  report.h  usb_hid.h
firmware/src/: config.c  flash_store.c  input.c  main.c  report.c  usb_descriptors.c  usb_hid.c
tools/: 99-rp2040joy.rules  invert_test.py  probe.py  pyproject.toml  write_test.py
